--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -11,9 +11,10 @@
             <div class="main-flex">
                 <div class="chart0">
                     <div class="bpGraph">
-                        <bp-graph></bp-graph>
+                        <app-area-graph></app-area-graph>
+                        <!-- <bp-graph></bp-graph> -->
                     </div>
-
+<!-- 
                     <div class="inner-flex">
                         <div id="cards" class="card1">
                             <div class="text">
@@ -32,15 +33,16 @@
                         <div class="refresh">
                             <app-button [btntext]="'Refresh'" (onClick)="onClick()"></app-button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="chart1">
                     <div class="pulseRate">
-                        <pulse-line-graph></pulse-line-graph>
+                        <!-- <pulse-line-graph></pulse-line-graph> -->
                     </div>
                     <div class="bmiGraph">
-                        <bmi-line-graph></bmi-line-graph>
+                        <!-- <bmi-line-graph></bmi-line-graph> -->
+                        <!-- <app-area-graph></app-area-graph> -->
                     </div>
 
                 </div>
