--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -104,6 +104,7 @@
                     display: flex;
                     flex-direction: row;
                     gap: 1em;
+                    width: 100%;
 
                     .pulseRate {
                         flex-grow: 0;
