--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -60,7 +60,7 @@
                     }
                     .inner-flex {
                         display: flex;
-                        flex-direction: column;
+                        flex-direction: row;
                         gap: 1em;
                         width: 100%;
                         height: 20%;
