--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -44,25 +44,11 @@
                 display: flex;
                 flex-direction: column;
                 gap: 2em;
-                .chart0 {
-                    display: flex;
-                    flex-direction: row;
-                    gap: 1em;
-                    flex-grow: 0;
-                    flex-shrink: 0;
-                    flex-basis: 50%;
 
-                    .bpGraph {
-                        flex-grow: 0;
-                        flex-shrink: 0;
-                        flex-basis: 70%;
-                        height: 50%;
-                    }
                     .inner-flex {
                         display: flex;
                         flex-direction: row;
                         gap: 1em;
-                        width: 100%;
                         height: 20%;
 
 
@@ -72,6 +58,7 @@
                             border-radius: 0.4em;
                             padding: 0.2em;
                             display: flex;
+                            width: 100%;
                             flex-direction: row;
                             justify-content: space-between;
 
@@ -98,28 +85,58 @@
                             }
                         }
                     }
-                }
 
-                .chart1 {
-                    display: flex;
-                    flex-direction: row;
-                    gap: 1em;
-                    width: 100%;
-
-                    .pulseRate {
-                        flex-grow: 0;
-                        flex-shrink: 0;
-                        flex-basis: 50%;
-                    }
-
-                    .bmiGraph {
-                        flex-grow: 0;
-                        flex-shrink: 0;
-                        flex-basis: 50%;
-
-                    }
+                    // .charts{
+                    //     width: 100%;
+                    //     height: 100%;
+                    // }
                 }
             }
         }
     }
-}
+
+
+
+    .nav{
+        width: 100%;
+        height: 100%;
+        font-family: 'Montserrat';
+        font-style: normal;
+        background: #FFFFFF;
+        font-weight: 400;
+        font-size: 1em;
+        line-height: 2em;
+        margin: auto;
+        gap: 2em;
+        border-bottom: 0.02em solid #E7E6EF ;
+        border-radius: 0;
+    }
+    
+    .tab {
+        cursor: pointer;
+        color: #030202;
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+        text-align: center;
+    }
+    
+    
+    .tab:hover,
+    .tab:focus,
+    .tab:active,
+    .active {
+        color: #1CB5BD;
+        border-bottom: 0.15em solid #1CB5BD;
+    }
+    
+    .item {
+        text-align: center;
+        width: 100%;
+        height: 2.2em;
+    }
+    .tabs{
+        padding: 1em;
+    }
