--- a/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.html
@@ -43,7 +43,7 @@
                         <pulse-line-graph></pulse-line-graph>
                     </div>
                     <div class="bmiGraph">
-                        <bmi-line-graph></bmi-line-graph>
+                        <app-area-graph></app-area-graph>
                     </div>
 
                 </div>
