--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -28,11 +28,10 @@
                     </div>
                     <div id="cards" class="card2">
                         <div class="text">
-                            <p>Total diseases</p>
-                            <h3>03</h3>
+                            <p>Last Health Check-up</p>
+                          
                         </div>
-                        <div id="image" style="background-color:#FCEAEE; height: 3.8em; width: 3.6em;"><img
-                                src="assets/images/diseases.png"></div>
+                        
                     </div>
                 </div>
                 <!-- <div class="refresh">
