--- a/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.scss
@@ -58,33 +58,15 @@
         .main-flex {
             display: flex;
             flex-direction: column;
+            gap: 1.5em;
             .tabs{
                 padding: 1em;
             }
 
-            .chart0 {
-                display: flex;
-                flex-direction: row;
-                gap: 1em;
-                // height: 200px;
-                flex-grow: 0;
-                flex-shrink: 0;
-                flex-basis: 50%;
-
-                .bpGraph {
-                    flex-grow: 0;
-                    flex-shrink: 0;
-                    flex-basis: 70%;
-                    height: 50%;
-                    // width:650px;
-                    //  height:35px;
-                }
-
                 .inner-flex {
                     display: flex;
-                    flex-direction: column;
+                    flex-direction: row;
                     gap: 1em;
-                    width: 100%;
                     height: 20%;
 
 
@@ -94,9 +76,10 @@
                         border-radius: 0.4em;
                         padding: 0.2em;
                         display: flex;
+                        width: 100%;
                         flex-direction: row;
                         justify-content: space-between;
-                        
+
 
                         p {
                             font-weight: 600;
@@ -110,7 +93,8 @@
                             font-size: 2em;
                             color: #2C2D2D;
                         }
-                        #image{
+
+                        #image {
                             margin-top: 0.5em;
                             padding: 0.2em;
                             padding-left: 0.1em;
@@ -120,33 +104,57 @@
                     }
                 }
 
+                // .charts{
+                //     width: 100%;
+                //     height: 100%;
+                // }
             }
-
-            .chart1 {
-                display: flex;
-                flex-direction: row;
-                gap: 1em;
-
-                .pulseRate {
-                    flex-grow: 0;
-                    flex-shrink: 0;
-                    flex-basis: 50%;
-                }
-
-                .bmiGraph {
-                    flex-grow: 0;
-                    flex-shrink: 0;
-                    flex-basis: 50%;
-
-                }
-            }
-
-            // .refresh {
-            //     width: 4.5em;
-            // }
         }
-
     }
 
 
+
+
+.nav{
+    width: 100%;
+    height: 100%;
+    font-family: 'Montserrat';
+    font-style: normal;
+    background: #FFFFFF;
+    font-weight: 400;
+    font-size: 1em;
+    line-height: 2em;
+    margin: auto;
+    gap: 2em;
+    border-bottom: 0.02em solid #E7E6EF ;
+    border-radius: 0;
+}
+
+.tab {
+    cursor: pointer;
+    color: #030202;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    text-align: center;
+}
+
+
+.tab:hover,
+.tab:focus,
+.tab:active,
+.active {
+    color: #1CB5BD;
+    border-bottom: 0.25em solid #1CB5BD;
+}
+
+.item {
+    text-align: center;
+    width: 100%;
+    height: 2.2em;
+}
+.tabs{
+    padding: 1em;
 }
