--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -43,13 +43,15 @@
             .main-flex {
                 display: flex;
                 flex-direction: column;
-                gap: 2em;
+                // gap: 2em;
+                margin: 1em;
 
                     .inner-flex {
                         display: flex;
                         flex-direction: row;
                         gap: 1em;
                         height: 20%;
+                        margin: 1em;
 
 
                         #cards {
@@ -65,31 +67,26 @@
 
                             p {
                                 font-weight: 600;
-                                font-size: 0.9em;
-                                line-height: 1.1em;
+                                font-size: 1.1em;
+                                line-height: 1.5em;
                                 color: #2C2D2D;
                             }
 
                             h3 {
                                 font-weight: 600;
-                                font-size: 2em;
+                                font-size: 2.5em;
                                 color: #2C2D2D;
                             }
 
                             #image {
-                                margin-top: 0.5em;
-                                padding: 0.2em;
-                                padding-left: 0.1em;
-                                margin-right: 0.6em;
-                                align-items: center;
+                                margin: 1.25em;
                             }
                         }
                     }
 
-                    // .charts{
-                    //     width: 100%;
-                    //     height: 100%;
-                    // }
+                    .charts{
+                        margin: 1em;
+                    }
                 }
             }
         }
@@ -136,7 +133,4 @@
         text-align: center;
         width: 100%;
         height: 2.2em;
-    }
-    .tabs{
-        padding: 1em;
     }
