view prescription now downloads

--- a/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
@@ -58,7 +58,7 @@
                 <td>{{pastRecord.uploadedBy}}</td>
                 <!-- <td>{{todo.targetDate | date}}</td> -->
                 <td>
-                  <app-button [btntext]="'View'" [btnConfig]="textBtnConfig"></app-button>
+                  <app-button [btntext]="'View'" [btnConfig]="textBtnConfig" (click)="viewPrescription(pastRecord.prescriptionId)"></app-button>
                 </td>
             </tr>
   
