--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -15,7 +15,7 @@
                             <p>Number of appointments</p>
                             <h3>16</h3>
                         </div>
-                        <div id="image" style="background-color: #F3FCEA; height: 4em; width: 3.8em;"><img
+                        <div id="image" style=" height: 4em; width: 3.8em;"><img
                                 src="assets/images/appointments.png"></div>
                     </div>
                     <div id="cards" class="card2">
@@ -23,8 +23,8 @@
                             <p>Total diseases</p>
                             <h3>03</h3>
                         </div>
-                        <div id="image" style="background-color:#FCEAEE; height: 4em; width: 3.8em;"><img
-                                src="assets/images/diseases.png"></div>
+                        <div id="image" style=" height: 4em; width: 3.8em;"><img
+                                src="assets/images/diseases.png" height="100%" width="100%"></div>
                     </div>
                     <div id="cards" class="card2">
                         <div class="text">
