--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -43,8 +43,6 @@
             .main-flex {
                 display: flex;
                 flex-direction: column;
-                // gap: 2em;
-                margin: 1em;
 
                     .inner-flex {
                         display: flex;
@@ -52,7 +50,6 @@
                         gap: 1em;
                         height: 20%;
                         margin: 1em;
-
 
                         #cards {
                             background: #FFFFFF;
@@ -80,6 +77,7 @@
 
                             #image {
                                 margin: 1.25em;
+                                align-content: center;
                             }
                         }
                     }
@@ -92,7 +90,8 @@
         }
     }
 
-
+.tabs{
+    margin-left:1em;
 
     .nav{
         width: 100%;
@@ -134,3 +133,4 @@
         width: 100%;
         height: 2.2em;
     }
+}
