--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -15,16 +15,15 @@
                             <p>Number of appointments</p>
                             <h3>16</h3>
                         </div>
-                        <div id="image" style=" height: 4em; width: 3.8em;"><img
-                                src="assets/images/appointments.png"></div>
+                        <div id="image" ><img src="assets/images/appointments.png" style=" height: 4.1em; width: 3.8em;"s></div>
                     </div>
                     <div id="cards" class="card2">
                         <div class="text">
                             <p>Total diseases</p>
                             <h3>03</h3>
                         </div>
-                        <div id="image" style=" height: 4em; width: 3.8em;"><img
-                                src="assets/images/diseases.png" height="100%" width="100%"></div>
+                        <div id="image" ><img
+                                src="assets/images/diseases.png" style=" height: 4.1em; width: 3.8em;"></div>
                     </div>
                     <div id="cards" class="card2">
                         <div class="text">
