--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.scss
@@ -13,79 +13,72 @@
         width: 100%;
         height: 93%;
         background-color: #f5feff;
-
+        font-family: "Montserrat";
+        font-style: normal;
         .flex-item1 {
             width: 18%;
             height: 100%;
         }
 
         .flex-item2 {
-            width: 82%;
-            height: 100%;
+            width: 77%;
+            height: 90%;
+            background-color: #fff;
+            box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+            border-radius: 0.5em;
+            margin: auto;
 
             .main {
-                margin: 2em;
-                width: 94%;
-                height: 90%;
-                background-color: #fff;
-                box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
-                border-radius: 0.5em;
-                #text1 {
-                    font-family: "Montserrat";
-                    font-style: normal;
+             margin: 0.75em;
+             display: flex;
+             flex-direction: column;
+             gap: 1em;
+                #text1 a {
                     font-weight: 500;
                     font-size: 1em;
                     line-height: 1.25em;
-                    color: #737373;
-                    padding-top: 1.25em;
-                    padding-left: 1.25em;
+                    // color: #737373;
                 }
+                .search{
+                    margin: 1em;
                 #patient-id{
                     display: flex;
+                    flex-direction: row;
                     justify-content: flex-end;
-                    margin-right: 1.25em;
-                    margin-top: -1.25em;
-                    #search{
-                    margin-left: 0.25em;
-                    }
+                }
                     }
                 .inner-flex {
                     display: flex;
                     flex-direction: row;
-                    gap: 1.4em;
-                    margin: 2em;
-                    width: 100%;
-                    height: 18%;
+                    gap: 1em;
+                    height: 20%;
+                    margin: 1em;
 
                 #cards {
                     background: #FFFFFF;
                     border: 0.1em solid #EAEBED;
-                    width: 30%;
                     border-radius: 0.4em;
-                    padding: 0.2em;
+                    width: 100%;
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
-
+                    padding: 0.5em;
 
                     p {
                         font-weight: 600;
-                        font-size: 0.9em;
-                        line-height: 1.1em;
+                        font-size: 1.1em;
+                        line-height: 1.5em;
                         color: #2C2D2D;
                     }
 
                     h3 {
                         font-weight: 600;
-                        font-size: 2em;
+                        font-size: 2.5em;
                         color: #2C2D2D;
                     }
 
                     #image {
-                        margin-top: 0.5em;
-                        padding: 0.2em;
-                        padding-left: 0.1em;
-                        margin-right: 0.6em;
+                        margin: 1em;
                         align-items: center;
                     }
                 }
@@ -96,7 +89,7 @@
 }
 .table-container {
     position: relative;
-    margin: 1.25em;
+    margin: 1em;
 
 table {
     position: absolute;
